Fix download code on small displays

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -419,10 +419,12 @@ label {
 code {
   padding: .12rem .2rem;
   color: $headingColour;
+  white-space: break-spaces;
 }
 
 pre code {
   padding: 0;
+  padding-left: 5px;
 }
 
 .required {
